Rewrite and rearchitect spring-data-dynamodb library to migrate from AWS SDK version 1 to version 2